<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.RegisterActivity">
    <EditText
        android:id="@+id/registerIDUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:ems="10"
        android:hint="@string/ID"
        android:inputType="numberSigned"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/registerNameUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:ems="10"
        android:hint="@string/UserName"
        android:inputType="textPersonName"
        android:drawablePadding="10dp"/>
    <EditText
        android:id="@+id/registerFLastNameUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:ems="10"
        android:hint="@string/firstLastName"
        android:inputType="textPersonName"
        android:drawablePadding="10dp"/>
    <EditText
        android:id="@+id/registerSLastNameUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:ems="10"
        android:hint="@string/secondLastName"
        android:inputType="textPersonName"
        android:drawablePadding="10dp"/>
    <EditText
        android:id="@+id/registerProvinceUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:ems="10"
        android:hint="@string/province"
        android:inputType="textPersonName"
        android:drawablePadding="10dp"/>
    <EditText
        android:id="@+id/registerCantonUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:ems="10"
        android:hint="@string/canton"
        android:inputType="textPersonName"
        android:drawablePadding="10dp"/>
    <EditText
        android:id="@+id/registerDistrictUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:ems="10"
        android:hint="@string/district"
        android:inputType="textPersonName"
        android:drawablePadding="10dp"/>
    <EditText
        android:id="@+id/registerBirthUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:ems="10"
        android:hint="@string/birth"
        android:inputType="textPersonName"
        android:drawablePadding="10dp"/>
    <EditText
        android:id="@+id/registerTelephoneUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:ems="10"
        android:hint="@string/telephone"
        android:inputType="numberSigned"
        android:drawablePadding="10dp"/>
    <EditText
        android:id="@+id/registerEmailUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:drawablePadding="10dp"/>
    <EditText
        android:id="@+id/registerPasswordUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:drawablePadding="10dp"/>
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Register" />
</LinearLayout>